@@ -59,9 +59,9 @@ class DS18B20DataCollectingThread(QtCore.QThread):
                 if t_idx != -1:
                     temp = round(float(lines[1][t_idx + 2:]) / 1000.0, 1)
 
-                    # offset after calibration
-                    offset = 1.0
-                    temp += offset
+                    if self.sensor_dict['cal_methode']:
+                        if self.sensor_dict['cal_methode'] == 'offset':
+                            temp += float(self.sensor_dict['cal_value'])
 
                     if temp > 50:
                         temp = None
@@ -149,9 +149,9 @@ class BME280DataCollectingThread(QtCore.QThread):
             hum = round(data.humidity, 1)
             pres = round(data.pressure, 1)
 
-            # offset after temp calibration
-            offset = 1.3
-            temp += offset
+            if self.sensor_dict['cal_methode']:
+                if self.sensor_dict['cal_methode'] == 'offset':
+                    temp += float(self.sensor_dict['cal_value'])
 
             if self.alt is not None:
                 pres_msl = pres + ((pres * 9.80665 * self.alt) / (287.0531 * (273.15 + temp + (self.alt / 400))))
@@ -277,6 +277,11 @@ class MqttToDbThread(QtCore.QThread):
         database = os.path.basename(message.topic)
         try:
             temperature = round(data['temperature'], 1)
+
+            if self.sensor_dict['cal_methode']:
+                if self.sensor_dict['cal_methode'] == 'offset':
+                    temperature += float(self.sensor_dict['cal_value'])
+
         except KeyError:
             temperature = None
         try:
